reproducible: fix bugs loading mnist, hybrid removed from options

--- a/demos/post_hoc_equivariance.ipynb
+++ b/demos/post_hoc_equivariance.ipynb
@@ -190,7 +190,7 @@
         "                            num_patches=49,\n",
         "                            num_classes=10,\n",
         "                            dropout=0.1).to(device)\n",
-        "    model_path = \"../saved/results/model2.pt\"\n",
+        "    model_path = \"checkpoints/model2.pt\"\n",
         "    print(model.load_state_dict(torch.load(model_path, map_location=device), strict=False))\n",
         "    return model\n",
         "\n",
