finetuning done with linear layer

--- a/src/modern_eq_vit/finetune.ipynb
+++ b/src/modern_eq_vit/finetune.ipynb
@@ -2,32 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/teamspace/studios/this_studio/GEVit-DL2-Project/src/modern_eq_vit\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/zeus/miniconda3/envs/cloudspace/lib/python3.10/site-packages/IPython/core/magics/osm.py:417: UserWarning: using dhist requires you to install the `pickleshare` library.\n",
-      "  self.shell.db['dhist'] = compress_dhist(dhist)[-100:]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%cd GEVit-DL2-Project/src/modern_eq_vit/"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +176,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "optimizer = torch.optim.SGD(model.parameters(), 0.00001)  # 0.001 works well here for floris model"
+    "class ModifiedHybrid(nn.Module):\n",
+    "    def __init__(self, gcnn, output_dim=2):\n",
+    "        super(ModifiedHybrid, self).__init__()\n",
+    "        self.gcnn = gcnn\n",
+    "        self.flatten = nn.Flatten()\n",
+    "        self.fc = nn.Linear(288, output_dim)  # 36*8 = 288\n",
+    "        for param in self.gcnn.parameters():\n",
+    "            param.requires_grad = False\n",
+    "        \n",
+    "    def forward(self, x):\n",
+    "        x = self.gcnn(x)\n",
+    "        x = self.flatten(x)\n",
+    "        x = self.fc(x)\n",
+    "        return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "adj_model = ModifiedHybrid(model.gcnn).to(device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "optimizer = torch.optim.Adam(adj_model.parameters(), 0.0001)  # 0.001 works well here for floris model"
    ]
   },
   {
@@ -202,8 +217,7 @@
    "outputs": [],
    "source": [
     "scaler = GradScaler()\n",
-    "    criterion = torch.nn.CrossEntropyLoss()\n",
-    "    best_model = copy.deepcopy(model.state_dict())"
+    "criterion = torch.nn.CrossEntropyLoss()"
    ]
   },
   {
@@ -212,7 +226,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.train()\n",
+    "adj_model.train()\n",
     "losses = []\n",
     "for inputs, labels in tqdm(train_loader):\n",
     "    inputs, labels = inputs.to(device), labels.to(device)  # Move inputs and labels to device\n",
@@ -221,10 +235,7 @@
     "    optimizer.zero_grad()\n",
     "    with torch.set_grad_enabled(True):\n",
     "        with autocast():  # Sets autocast in the main thread. It handles mixed precision in the forward pass.\n",
-    "            outputs = model(inputs)\n",
-    "            # print(model.gcnn)\n",
-    "            # print(outputs.shape)\n",
-    "            print(outputs[0:5,:])\n",
+    "            outputs = adj_model(inputs)\n",
     "            loss = criterion(outputs, labels)\n",
     "\n",
     "        if loss.item() != loss.item():\n",
@@ -237,7 +248,7 @@
     "        scaler.update()\n",
     "        print(loss.item())\n",
     "        # print(model.project.weight.grad)\n",
-    "        lr_scheduler.step()"
+    "        # lr_scheduler.step()"
    ]
   },
   {
@@ -246,64 +257,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "positive = negative = total = correct = TP = TN = FP = FN = 0\n",
-    "model.eval()\n",
-    "with torch.no_grad():  # Disable gradient calculation during inference\n",
-    "    for inputs, labels in val_loader:\n",
-    "        inputs, labels = inputs.to(device), labels.to(device)  # Move inputs and labels to device\n",
-    "        outputs = model(inputs)\n",
-    "        _, predicted = torch.max(outputs.data, 1)\n",
-    "\n",
-    "        # Update total and correct counters\n",
-    "        total += labels.size(0)\n",
-    "        correct += (predicted == labels).sum().item()\n",
-    "        negative += (labels == 0).sum().item()\n",
-    "        positive += (labels == 1).sum().item()\n",
-    "\n",
-    "        # Update TP, TN, FP, FN counters\n",
-    "        TP += ((predicted == 1) & (labels == 1)).sum().item()\n",
-    "        TN += ((predicted == 0) & (labels == 0)).sum().item()\n",
-    "        FP += ((predicted == 1) & (labels == 0)).sum().item()\n",
-    "        FN += ((predicted == 0) & (labels == 1)).sum().item()\n",
-    "\n",
-    "# Calculate accuracy\n",
-    "accuracy = 100 * correct / total\n",
-    "if accuracy > best_val_acc:\n",
-    "    best_model = copy.deepcopy(model.state_dict())\n",
-    "    best_val_acc = accuracy\n",
-    "\n",
-    "TP_percentage = 100 * TP / positive\n",
-    "TN_percentage = 100 * TN / negative\n",
-    "FP_percentage = 100 * FP / positive\n",
-    "FN_percentage = 100 * FN / negative\n",
-    "\n",
-    "# Calculate precision and recall\n",
-    "precision = 100 * TP / (TP + FP) if (TP + FP) > 0 else 0\n",
-    "recall = 100 * TP / (TP + FN) if (TP + FN) > 0 else 0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model.eval()  # Set the model to evaluation mode\n",
+    "adj_model.eval()  # Set the model to evaluation mode\n",
     "correct = 0\n",
     "total = 0\n",
     "with torch.no_grad():  # Disable gradient calculation during inference\n",
     "    for inputs, labels in test_loader:\n",
     "        inputs, labels = inputs.to(device), labels.to(device)  # Move inputs and labels to device\n",
-    "        outputs = model(inputs)\n",
+    "        outputs = adj_model(inputs)\n",
     "        _, predicted = torch.max(outputs.data, 1)\n",
     "        total += labels.size(0)\n",
     "        correct += (predicted == labels).sum().item()\n",
-    "test_acc = 100 * correct / total\n",
-    "\n",
-    "\n",
-    "# save model and log it\n",
-    "model.load_state_dict(best_model)\n",
-    "torch.save(model.state_dict(), \"saved/finetuned.pt\")"
+    "test_acc = 100 * correct / total"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_acc"
    ]
   }
  ],
