--- a/demos/train_ViT.ipynb
+++ b/demos/train_ViT.ipynb
@@ -4,77 +4,6 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "2b1BE9FJ74Z4",
-        "outputId": "950ce4d8-1034-46cd-e3a7-8500d57ef880"
-      },
-      "outputs": [],
-      "source": [
-        "!git clone https://github.com/WouterBant/GEVit-DL2-Project.git"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "AD6Y9aRA74Z5",
-        "outputId": "2b7231f8-0404-4465-917d-b4038cc1bf96"
-      },
-      "outputs": [],
-      "source": [
-        "%cd GEVit-DL2-Project/"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "0-ku1SYn74Z5"
-      },
-      "outputs": [],
-      "source": [
-        "%load_ext autoreload\n",
-        "%autoreload 2"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "GYZLrQGB74Z5"
-      },
-      "outputs": [],
-      "source": [
-        "import os,sys\n",
-        "g_selfatt_source =  os.path.join(os.getcwd(), '..')\n",
-        "if g_selfatt_source not in sys.path:\n",
-        "    sys.path.append(g_selfatt_source)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "ZXt7P_mn8KM1",
-        "outputId": "cbf2d772-3c3f-497e-a571-b532833b0029"
-      },
-      "outputs": [],
-      "source": [
-        "!pip install einops"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
         "id": "yPfj4x6Q74Z5"
       },
       "outputs": [],
@@ -83,6 +12,8 @@
         "import torch.nn as nn\n",
         "from torchvision import transforms\n",
         "\n",
+        "import sys\n",
+        "sys.path.append('../src/')\n",
         "from datasets import MNIST_rot\n",
         "from g_selfatt.utils import num_params\n",
         "\n",
