update train_MNIST and train_ViT

--- a/demos/train_ViT.ipynb
+++ b/demos/train_ViT.ipynb
@@ -7,27 +7,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "2b1BE9FJ74Z4",
-        "outputId": "950ce4d8-1034-46cd-e3a7-8500d57ef880"
-      },
-      "outputs": [],
-      "source": [
-        "!git clone https://github.com/WouterBant/GEVit-DL2-Project.git"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
         "id": "AD6Y9aRA74Z5",
         "outputId": "2b7231f8-0404-4465-917d-b4038cc1bf96"
       },
       "outputs": [],
       "source": [
-        "%cd GEVit-DL2-Project/"
+        "%cd GEVit-DL2-Project"
       ]
     },
     {
@@ -54,21 +39,6 @@
         "g_selfatt_source =  os.path.join(os.getcwd(), '..')\n",
         "if g_selfatt_source not in sys.path:\n",
         "    sys.path.append(g_selfatt_source)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "ZXt7P_mn8KM1",
-        "outputId": "cbf2d772-3c3f-497e-a571-b532833b0029"
-      },
-      "outputs": [],
-      "source": [
-        "!pip install einops"
       ]
     },
     {
@@ -373,7 +343,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.11.5"
+      "version": "3.11.8"
     }
   },
   "nbformat": 4,
