--- a/demos/Train_MNIST.ipynb
+++ b/demos/Train_MNIST.ipynb
@@ -2,22 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "YKpitc-Cm_IJ",
-        "outputId": "2687d5f3-d31f-45c2-b2b5-3387924dcc89"
-      },
-      "outputs": [],
-      "source": [
-        "!git clone https://github.com/WouterBant/GEVit-DL2-Project.git"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -25,31 +10,36 @@
         "id": "T1tNdHhQnBrw",
         "outputId": "a984edf1-a681-4c63-c31c-c9b198bba30d"
       },
-      "outputs": [],
-      "source": [
-        "%cd GEVit-DL2-Project/"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "c:\\Users\\Cliof\\Documents\\GEVit-DL2-Project\\demos\\GEVit-DL2-Project\\GEVit-DL2-Project\\src\n"
+          ]
         },
-        "id": "Vvt4W7i3ni7c",
-        "outputId": "1be9e940-7a25-4013-c55f-2684127730e6"
-      },
-      "outputs": [],
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "c:\\Users\\Cliof\\miniconda3\\envs\\myenv\\Lib\\site-packages\\IPython\\core\\magics\\osm.py:417: UserWarning: using dhist requires you to install the `pickleshare` library.\n",
+            "  self.shell.db['dhist'] = compress_dhist(dhist)[-100:]\n"
+          ]
+        }
+      ],
       "source": [
-        "!pip install einops\n",
-        "!pip install wandb\n",
-        "!pip install ml_collections"
+        "%cd GEVit-DL2-Project/src/\n",
+        "%load_ext autoreload\n",
+        "%autoreload 2\n",
+        "import os,sys\n",
+        "g_selfatt_source =  os.path.join(os.getcwd(), '..')\n",
+        "if g_selfatt_source not in sys.path:\n",
+        "    sys.path.append(g_selfatt_source)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -58,7 +48,16 @@
         "id": "Su51Tu9OnCTI",
         "outputId": "152bcea2-f1f2-4c37-a3ef-fd6c8ea96efa"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "c:\\Users\\Cliof\\miniconda3\\envs\\myenv\\Lib\\site-packages\\torch\\amp\\autocast_mode.py:250: UserWarning: User provided device_type of 'cuda', but CUDA is not available. Disabling\n",
+            "  warnings.warn(\n"
+          ]
+        }
+      ],
       "source": [
         "import torch\n",
         "import torchvision\n",
@@ -346,7 +345,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.7.7"
+      "version": "3.11.8"
     }
   },
   "nbformat": 4,
