--- a/demos/train_ViT.ipynb
+++ b/demos/train_ViT.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -10,18 +10,43 @@
         "id": "AD6Y9aRA74Z5",
         "outputId": "2b7231f8-0404-4465-917d-b4038cc1bf96"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "c:\\Users\\Cliof\\Documents\\GEVit-DL2-Project\\demos\\GEVit-DL2-Project\\GEVit-DL2-Project\\src\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "c:\\Users\\Cliof\\miniconda3\\envs\\myenv\\Lib\\site-packages\\IPython\\core\\magics\\osm.py:417: UserWarning: using dhist requires you to install the `pickleshare` library.\n",
+            "  self.shell.db['dhist'] = compress_dhist(dhist)[-100:]\n"
+          ]
+        }
+      ],
       "source": [
-        "%cd GEVit-DL2-Project"
+        "%cd GEVit-DL2-Project/src/"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "id": "0-ku1SYn74Z5"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "The autoreload extension is already loaded. To reload it, use:\n",
+            "  %reload_ext autoreload\n"
+          ]
+        }
+      ],
       "source": [
         "%load_ext autoreload\n",
         "%autoreload 2"
@@ -29,7 +54,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "id": "GYZLrQGB74Z5"
       },
@@ -43,7 +68,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "id": "yPfj4x6Q74Z5"
       },
