--- a/demos/Train_MNIST.ipynb
+++ b/demos/Train_MNIST.ipynb
@@ -15,7 +15,9 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "c:\\Users\\Cliof\\Documents\\GEVit-DL2-Project\\demos\\GEVit-DL2-Project\\GEVit-DL2-Project\\src\n"
+            "c:\\Users\\Cliof\\Documents\\GEVit-DL2-Project\\demos\\GEVit-DL2-Project\\GEVit-DL2-Project\\src\n",
+            "The autoreload extension is already loaded. To reload it, use:\n",
+            "  %reload_ext autoreload\n"
           ]
         },
         {
