--- a/demos/Train_MNIST.ipynb
+++ b/demos/Train_MNIST.ipynb
@@ -2,46 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 3,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "T1tNdHhQnBrw",
-        "outputId": "a984edf1-a681-4c63-c31c-c9b198bba30d"
-      },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "c:\\Users\\Cliof\\Documents\\GEVit-DL2-Project\\demos\\GEVit-DL2-Project\\GEVit-DL2-Project\\src\n",
-            "The autoreload extension is already loaded. To reload it, use:\n",
-            "  %reload_ext autoreload\n"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "c:\\Users\\Cliof\\miniconda3\\envs\\myenv\\Lib\\site-packages\\IPython\\core\\magics\\osm.py:417: UserWarning: using dhist requires you to install the `pickleshare` library.\n",
-            "  self.shell.db['dhist'] = compress_dhist(dhist)[-100:]\n"
-          ]
-        }
-      ],
-      "source": [
-        "%cd GEVit-DL2-Project/src/\n",
-        "%load_ext autoreload\n",
-        "%autoreload 2\n",
-        "import os,sys\n",
-        "g_selfatt_source =  os.path.join(os.getcwd(), '..')\n",
-        "if g_selfatt_source not in sys.path:\n",
-        "    sys.path.append(g_selfatt_source)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -50,17 +11,11 @@
         "id": "Su51Tu9OnCTI",
         "outputId": "152bcea2-f1f2-4c37-a3ef-fd6c8ea96efa"
       },
-      "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "c:\\Users\\Cliof\\miniconda3\\envs\\myenv\\Lib\\site-packages\\torch\\amp\\autocast_mode.py:250: UserWarning: User provided device_type of 'cuda', but CUDA is not available. Disabling\n",
-            "  warnings.warn(\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
+        "import sys\n",
+        "sys.path.append('../src')\n",
+        "\n",
         "import torch\n",
         "import torchvision\n",
         "from datasets import MNIST_rot\n",
@@ -347,7 +302,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.11.8"
+      "version": "3.11.5"
     }
   },
   "nbformat": 4,
